--- a/style.scss
+++ b/style.scss
@@ -52,7 +52,7 @@ img {
 	background: $green;
 	@include border-radius(4px);
 	display: inline-block;
-	font-size: 0.8em;
+	// font-size: 0.8em;
 	font-weight: 700;
 	line-height: 36px;
 	padding: 12px 18px;
@@ -97,6 +97,7 @@ img {
 		}
 
 		a {
+			color: $grey;
 			text-decoration: none;
 
 			&:hover {
