--- a/grid.scss
+++ b/grid.scss
@@ -15,7 +15,7 @@ $breakpoints: (
 	.row {
 		display: -ms-grid;
 		display: grid;
-		-ms-grid-columns: repeat(12, 1fr);
+		-ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 		grid-template-columns: repeat(12, 1fr);
 
 		.col {
