--- a/style.scss
+++ b/style.scss
@@ -169,7 +169,7 @@ img {
 			width: auto;
 
 			.col {
-				-ms-grid-column: span 6;
+				-ms-grid-column-span: 6;
 				grid-column: span 6;
 
 				&.screenshots {
@@ -195,7 +195,7 @@ img {
 
 		.footer.row {
 			.col {
-				-ms-grid-column: span 3;
+				-ms-grid-column-span: 3;
 				grid-column: span 3;
 			}
 
